correcting the style of the picture 1 of the main and the colors and text align for footer

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
     margin-left: 10px;
     margin-bottom: 10px;
     margin-top: 0;
+    justify-content: center;
 
 }
 #red{
